css/base.css
/* ... */
#month-jumper-wrapper {
    position: fixed;
    z-index: 99;
    width: 100vw;
    height: 100vh;
    background-color: rgba(0, 0, 0, .50);
    display: flex;
    justify-content: center;
    align-items: center;
}

#month-jumper {
    background-color: var(--page-background-color);
    /* border: 1px solid var(--secondary-accent-color); */
    padding: 2rem;
    display: flex;
    flex-direction: column;
    gap: .5rem;
    border-radius: .5rem;
    box-shadow: 0px 1rem 1rem rgba(0, 0, 0, 0.5);
    margin: 0.5rem;
}

#month-jumper > div {
    display: flex;
    flex-direction: row;
    gap: 0.5rem;
}

a:hover i {
    color: var(--main-color-hover) !important;
}

button.cancel, a.cancel {
    background-color: var(--main-color);
    color: white;
}

button.cancel:hover, a.cancel:hover {
    background-color: var(--main-color-hover);
}

#calendar-heading-month {
    cursor: pointer;
}

/* Dashboard */
main.dashboard {
    padding: 0 2rem;
}

main.dashboard > p {
    text-align: center;
    margin-bottom: 0.5rem;
}

#dashboard {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    width: 100%;
    /* padding: 0 8rem 4rem 8rem; */
    margin-top: 2rem;
    gap: 3rem;
    justify-content: center;
}

.dashboard-item {
    display: inline;
    background-color: var(--main-color);
    transition: background-color .3s;
    font-weight: 400;
    border-radius: 1rem;
    padding: 2rem;
    color: var(--button-font-color);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 1rem;
    width: 14rem;
    height: 14rem;
}

.dashboard-item:hover {
    background-color: var(--accent-color);
    cursor: pointer;
    text-shadow: var(--accent-color);
}

.dashboard-item > img {
    filter: invert();
    height: 4rem;
}

@media only screen and (max-width: 680px) {
    main.dashboard {
        padding: 1rem;

    }
    #dashboard {
        gap: 1rem;
    }

    .dashboard-item {
        padding: 1rem;
        width: 10rem;
        height: 10rem;
        font-size: 0.8rem;
    }
}

.pop-up-message {
    text-align: center;
    font-weight: 500;
}

/* Sign up form */

@media only screen and (min-width: 1024px) {
    main.signup-form {
        margin: 0rem 8rem 4rem 8rem;
    }
}

form.signup-form,
form.add-org-form {
    display: flex;
    gap: 1rem;
    flex-direction: column;
}

/* thomas added this */
form.signup-form .section-box,
form#person-search.section-box,
form#org-search.section-box,
form.add-org-form .section-box {
    border: 3px solid var(--main-color);
    border-radius: 5px;
    padding: 15px;
    margin-bottom: 20px;
    background-color: var(--accent-color);
    width: fit-content;
    min-width: 100%;
}

textarea#description {
    resize: none;
}

form.signup-form > fieldset {
    padding: 1.5rem;
    display: flex;
    gap: .5rem;
    flex-direction: column;
}

form.signup-form > fieldset > label,
form#org-searcg > div > label,  
form#person-search > div > label {
    margin-bottom: -.25rem;
}

form.signup-form textarea {
    height: 7rem;
}

form.signup-form em {
    color: var(--error-color);
}

.radio-group {
    display: flex;
    flex-direction: row;
    justify-content: left;
    gap: 1rem;
}

.radio-group > label {
    font-weight: 300;
    width: fit-content;
    margin-left: -.75rem;
    color: var(--page-font-color);
}

.return-button,
a.return-button,
.num a {
    background-color: var(--main-color); 
    border: 3px solid var(--main-color-hover);
    border-radius: 0.5rem !important;
    padding-inline: 1.5rem !important;
    padding-block: 0.5rem !important;
    font-weight: 550;
    text-align: center;
    color: white;
}

.return-button:hover,
a.return-button:hover,
.num a:hover {
    background-color: var(--main-color-hover) !important;
    color: white;
}

.return-button {
    border-radius: var(--radius-lg) !important;
    padding-inline: calc(var(--spacing) * 6) !important;
    padding-block: calc(var(--spacing) * 2) !important;
  }

.error-block {
    text-align: center;
    font-weight: 600;
}

/* Replacing normal_tw.css to simplify editing */
/* Component Styles */
.main-content-box {
    width: 100%;
    max-width: 48rem;
    padding: 2rem;
    margin-bottom: 2rem;
    margin-left: auto;
    margin-right: auto;
    border-radius: 0.5rem;
    /* box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5); */
}

.info-box {
    width: 100%;
    padding: 1rem;
    margin-bottom: 0;
    background-color: var(--page-background-color);
    border: 2px solid var(--light-border);
    border-radius: 0.5rem;
    /* box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05); */
    font-weight: 500;
}

/* Utility Classes */
.text-center {
    text-align: center;
}

.spacing-bottom {
    margin-bottom: 2rem;
}

/* Form Layout */
.section-box {
    background-color: var(--page-background-color);
    border-radius: 0.5rem;
    padding: 1.5rem;
    margin-bottom: 1rem;
    border: 1px solid var(--light-border);
}

.blue-div {
    height: 2px;
    background-color: var(--accent-color);
    margin: 1rem 0;
}

.median-div {
    height: 1px;
    margin: 0.5rem 2rem;
    background-color: var(--inactive-font-color);
}

form.signup-form a {
    color: var(--error-color);
}

form.signup-form a:hover {
    color: var(--error-toast-background-color);
}
/* end normal_tw conversion ~Blue*/

/*--------------start of how-to page styles------------------*/


.sidebar-wrapper {
    position: sticky;
    height: auto;
    width: fit-content;
    border-radius: var(--button-border-radius);

    display: inline-block;
}

.sidebar {
    display: flex;
    gap: 5px;
    flex-direction: column;
    flex-wrap: nowrap;
    justify-content: center;
    align-items: flex-start;
    border-radius: calc(var(--button-border-radius) + 5px);
    background: var(--page-background-color);
    position: sticky;
    width: 100%;
    padding: 5px;

    border: 1px solid #d1d5db;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.07);
}
/* ... */

